--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "express": "^5.0.0-alpha.2",
-    "mongodb": "^3.1.8",
-    "mongoose": "^5.3.4",
-    "cors": "^2.8.4",
-    "body-parser": "^1.18.3"
+    "mongodb": "^3.1.11",
+    "mongoose": "^5.4.6",
+    "cors": "^2.8.5",
+    "body-parser": "^1.18.3",
+    "unique-slug": "^2.0.1"
   },
   "engines": {
     "node": "8"
